--- a/style.scss
+++ b/style.scss
@@ -75,3 +75,9 @@ nav{
     width: 1200px;
     margin: 0 auto;
 }
+
+footer{
+    text-align: center;
+    padding: 150px 0px 30px;
+    color: $color-blue;
+}
