--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ nav a {
       grid-template-columns: repeat(2, 1fr);
   margin: 30px auto;
   width: 1200px;
+  overflow: hidden;
 }
 
 #about img {
@@ -65,6 +66,7 @@ nav a {
       grid-template-columns: repeat(2, 1fr);
   margin: 30px auto;
   width: 1200px;
+  overflow: hidden;
       grid-template-areas: "text pic";
 }
 
