--- a/style.scss
+++ b/style.scss
@@ -48,6 +48,7 @@ nav{
     grid-template-columns: repeat(2,1fr);
     margin: 30px auto;
     width: 1200px;
+    overflow: hidden;
     
     img{
         width: 100%;
